[gd_scene load_steps=7 format=3 uid="uid://by4ao52surwi3"]

[ext_resource type="Script" path="res://scripts/keypad.gd" id="1_dcfwt"]
[ext_resource type="Material" uid="uid://chjxtb06jm8dj" path="res://assets/materials/white_B0B0B0.tres" id="1_hnfjd"]
[ext_resource type="Material" uid="uid://s4t6e7q057s" path="res://assets/materials/vantablack.tres" id="2_x0pid"]
[ext_resource type="PackedScene" uid="uid://bd3scx5jl8nfg" path="res://scenes/parts/button_keypad.tscn" id="4_7smhu"]
[ext_resource type="Material" uid="uid://b6dmndnuvfqv2" path="res://assets/materials/red_glowy.tres" id="4_k21fy"]

[sub_resource type="Environment" id="Environment_68eto"]
background_mode = 2
glow_enabled = true
glow_intensity = 8.0
glow_strength = 2.0
glow_blend_mode = 0
glow_hdr_threshold = 0.32
glow_hdr_scale = 0.97
glow_hdr_luminance_cap = 256.0
glow_map_strength = 0.44

[node name="keypad" type="Node3D"]
script = ExtResource("1_dcfwt")
combinacion_correcta = 1234

[node name="vis" type="Node3D" parent="."]

[node name="body" type="CSGBox3D" parent="vis"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.13, -0.015)
size = Vector3(0.25, 0.41, 0.04)
material = ExtResource("1_hnfjd")

[node name="pantalla" type="CSGBox3D" parent="vis"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.49012e-08, 0.285, 0.005)
size = Vector3(0.2, 0.05, 0.01)
material = ExtResource("2_x0pid")

[node name="texto_en_pantalla" type="Label3D" parent="vis"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.29, 0.02)
pixel_size = 0.0001
font_size = 512
outline_size = 0

[node name="indicador" type="CSGBox3D" parent="vis"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.125, 0.335, 0.004)
size = Vector3(0.02, 0.02, 0.02)
material = ExtResource("4_k21fy")

[node name="botones" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.125)

[node name="Button_keypad0" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.21072e-08, -0.025, 0.12)
hover_message = "Input  0"

[node name="Button_keypad1" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.075, 0.2, 0.12)
text = "1"
hover_message = "Input 1"

[node name="Button_keypad2" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.2, 0.12)
text = "2"
hover_message = "Input  2"

[node name="Button_keypad3" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.075, 0.2, 0.12)
text = "3"
hover_message = "Input  3"

[node name="Button_keypad4" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.075, 0.125, 0.12)
text = "4"
hover_message = "Input  4"

[node name="Button_keypad5" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.125, 0.12)
text = "5"
hover_message = "Input  5"

[node name="Button_keypad6" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.075, 0.125, 0.12)
text = "6"
hover_message = "Input  6"

[node name="Button_keypad7" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.075, 0.05, 0.12)
text = "7"
hover_message = "Input  7"

[node name="Button_keypad8" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.05, 0.12)
text = "8"
hover_message = "Input  8"

[node name="Button_keypad9" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.075, 0.05, 0.12)
text = "9"
hover_message = "Input  9"

[node name="Button_keypad_enter" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.075, -0.025, 0.12)
text = "E"
hover_message = "Enter code"

[node name="Button_keypad_reset" parent="botones" instance=ExtResource("4_7smhu")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.075, -0.025, 0.12)
text = "R"
hover_message = "Reset code"

[node name="Correcto" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="Incorrecto" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="Input" type="AudioStreamPlayer3D" parent="."]
max_polyphony = 4
bus = &"SFX"

[node name="Reset" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_68eto")

[connection signal="interacted" from="botones/Button_keypad0" to="." method="_on_boton_combinacion_0_interacted"]
[connection signal="interacted" from="botones/Button_keypad1" to="." method="_on_boton_combinacion_1_interacted"]
[connection signal="interacted" from="botones/Button_keypad2" to="." method="_on_boton_combinacion_2_interacted"]
[connection signal="interacted" from="botones/Button_keypad3" to="." method="_on_boton_combinacion_3_interacted"]
[connection signal="interacted" from="botones/Button_keypad4" to="." method="_on_boton_combinacion_4_interacted"]
[connection signal="interacted" from="botones/Button_keypad5" to="." method="_on_boton_combinacion_5_interacted"]
[connection signal="interacted" from="botones/Button_keypad6" to="." method="_on_boton_combinacion_6_interacted"]
[connection signal="interacted" from="botones/Button_keypad7" to="." method="_on_boton_combinacion_7_interacted"]
[connection signal="interacted" from="botones/Button_keypad8" to="." method="_on_boton_combinacion_8_interacted"]
[connection signal="interacted" from="botones/Button_keypad9" to="." method="_on_boton_combinacion_9_interacted"]
[connection signal="interacted" from="botones/Button_keypad_enter" to="." method="_on_boton_combinacion_enter_interacted"]
[connection signal="interacted" from="botones/Button_keypad_reset" to="." method="_on_boton_combinacion_reset_interacted"]
